--- a/jslint-toolkit-rhino/changes.txt
+++ b/jslint-toolkit-rhino/changes.txt
@@ -1,8 +1,14 @@
 JSLint-Toolkit Changes:
 
++2011-02-17 v1.2
+	-Update UI using qooxdoo 1.3.
+
+
+
 +2010-11-22 v1.1
 	-Fix bugs on Mac.
 	-Use Rhino predefined function "load" instead of pre-combination.
+
 
 
 +2010-08-13 v1.1
